# expressdate

./: README.md  grammer.bnf  pyproject.toml
.github/workflows/: ci.yml  pytest.yml
expressdate/: __init__.py  date.py  parse.py
src/tests/: test_parse.py
tests/: test_date.py  test_init.py  test_parse.py
