[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "expressdate"
version = "0.0.1"
description = ""
authors = ["DuelitDev <jyoon07dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.group.style.dependencies]
black = "^24.10.0"

[tool.poetry.group.typing.dependencies]
pyright = "^1.1.391"
mypy = "^1.14.0"
